LinKreta_POC_Repository/force-app/main/default/objects/SMEG_Master__c/SMEG_Master__c.object-meta.xml
<CustomObject>
    <label>SMEG Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMEG Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>