LinKreta_POC_Repository/force-app/main/default/objects/SMEG_Master__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SERV_LINE_ID</description>
    <label>Expertise</label>
    <referenceTo>ExpertiseMaster__c</referenceTo>
    <relationshipLabel>SMEG Master</relationshipLabel>
    <relationshipName>SMEG_Master</relationshipName>
    <type>Lookup</type>
</CustomField>