LinKreta_POC_Repository/force-app/main/default/objects/SMEG_Master__c/fields/SMEG_Leader__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ISU_HEAD_ID</description>
    <label>SMEG Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMEG_Master</relationshipName>
    <type>Lookup</type>
</CustomField>