LinKreta_POC_Repository/force-app/main/default/objects/SMEG_Master__c/fields/SMEG_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Short_Name__c</fullName>
    <label>SMEG Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>