LinKreta_POC_Repository/force-app/main/default/objects/SMEG_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOV_Id__c</columns>
    <columns>Mid__c</columns>
    <columns>SMEG_Leader__c</columns>
    <columns>Expertise__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Valuations</value>
    </filters>
    <label>All</label>
</ListView>